Config securities for the edge service